--- a/illinois/mounting-security-cameras-chicago.html
+++ b/illinois/mounting-security-cameras-chicago.html
@@ -48,7 +48,7 @@
     <h3>Get Reliable Camera Mounting in Chicago</h3>
     <p>Don’t risk poor installation—trust experts in <strong>security cameras and installation</strong>. Call today to schedule your appointment and protect your property with professional camera mounting services in Chicago.</p>
 <h3>Contact Us Today</h3>
-    <p>Don’t wait until it’s too late—secure your property with trusted experts. Call us now for a free consultation on <strong>security system installation in Chicago</strong>.</p>
+    <p>Don’t wait until it’s too late—secure your property with trusted experts. Call us now for a free consultation on <strong>Mounting Security Cameras in Chicago</strong>.</p>
 
  <p>            <a href="tel:+12137760490"><button class="button-71" role="button">Call (213)776-0490</button></a></p>
     <hr>
