--- a/illinois/surveillance-camera-installation-chicago.html
+++ b/illinois/surveillance-camera-installation-chicago.html
@@ -49,7 +49,7 @@
     <h3>Schedule Your Installation Today</h3>
     <p>Boost your safety with expert <strong>surveillance camera installation in Chicago</strong>. Contact us now for a free estimate and secure your property with trusted professionals.</p>
 <h3>Contact Us Today</h3>
-    <p>Don’t wait until it’s too late—secure your property with trusted experts. Call us now for a free consultation on <strong>security system installation in Chicago</strong>.</p>
+    <p>Don’t wait until it’s too late—secure your property with trusted experts. Call us now for a free consultation on <strong>Surveillance Camera Installation Chicago in Chicago</strong>.</p>
 
  <p>            <a href="tel:+12137760490"><button class="button-71" role="button">Call (213)776-0490</button></a></p>
     <hr>
