--- a/illinois/security-system-installation-chicago.html
+++ b/illinois/security-system-installation-chicago.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="0; url='https://quotecontractor.com/illinois/security-system-installation-chicago.html'" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Security System Installation Chicago | Professional Camera Security Setup</title>
