--- a/illinois/surveillance-camera-installation-chicago.html
+++ b/illinois/surveillance-camera-installation-chicago.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="0; url='https://quotecontractor.com/illinois/surveillance-camera-installation-chicago.html'" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Surveillance Camera Installation Chicago | Video Security Experts</title>
