--- a/illinois/mounting-security-cameras-chicago.html
+++ b/illinois/mounting-security-cameras-chicago.html
@@ -7,7 +7,7 @@
   <title>Mounting Security Cameras Chicago | Professional Installation Service</title>
   <meta name="description" content="Reliable mounting of security cameras in Chicago. Our experts provide professional installation, indoor & outdoor solutions, and full support after setup.">
 <link rel="stylesheet" type="text/css" href="style.css">
-
+<link rel="canonical" href="https://quotecontractor.com/illinois/mounting-security-cameras-chicago.html">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9ZSZN92KQ"></script>
