--- a/illinois/index.html
+++ b/illinois/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url='https://quotecontractor.com/illinois/security-camera.html'" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Security Camera Installation Services in Chicago</title>
-  <meta name="description" content="Professional security system installation, surveillance camera setup, and mounting services in Chicago. Protect your home and business with trusted experts.">
+  <title>Security Camera</title>
+  
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="canonical" href="https://quotecontractor.com/illinois/security-camera.html">
+
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9ZSZN92KQ"></script>
@@ -20,45 +19,7 @@
 </script>
 </head>
 <body>
-  <header>
-<nav>
-  <div class="menu-toggle" onclick="toggleMenu()">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-  <ul id="nav-menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="security-system-installation-chicago.html">Security System Installation</a></li>
-    <li><a href="surveillance-camera-installation-chicago.html">Surveillance Camera Installation</a></li>
-    <li><a href="mounting-security-cameras-chicago.html">Mounting Security Cameras</a></li>
-  </ul>
-</nav>
-    <h1>Security Camera Installation Services in Chicago</h1>
-    <p>Protect your home and business with professional installation of security systems and cameras across Chicago.</p>
-  </header>
- <main>
-    <section>
-      <h2>Our Services</h2>
-      <p>We provide complete solutions for security systems, from <strong>camera security system installation</strong> to <strong>mounting security cameras</strong> and <strong>video surveillance setup</strong>. Our Chicago experts deliver reliable protection tailored to your needs.</p>
-    </section>
-
-    <section>
-      <h2>Why Choose Us</h2>
-      <ul>
-        <li>Experienced team with years of security installation expertise.</li>
-        <li>Custom solutions for residential and commercial properties.</li>
-        <li>Smart technology with mobile integration and monitoring.</li>
-        <li>Affordable pricing and fast service across Chicago.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Contact Us</h2>
-      <p>Looking to secure your property? Get in touch today for a free consultation on <strong>security camera installation services in Chicago</strong>.</p>
-<p>            <a href="tel:+12137760490"><button class="button-71" role="button">Call (213)776-0490</button></a></p>
-    </section>
-  </main>
+ 
 
   <footer>
     <p>&copy; 2025 Security Experts Chicago. All Rights Reserved.</p>
