Fix HTML encoding issues and clean up structure

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 </div>
 <div class="footer"><nav>
                 <ul class="menu">
+                  <p><a href="https://www.facebook.com/cctvinstallationchicagoil">CCTV installation in Chicago IL</a></p>
                     <li><a href="https://estimate.click/">Home Page</a></li>
                     <li><a href="mailto:js213205@gmail.com">Contact</a></li>
                     <p><a href="https://estimate.click/illinois/">Home Security</a></p>
@@ -83,4 +84,5 @@
 https://estimate.click/ © 2025
 </div>
 </body>
+
 </html>
